[package]
name = "db-gen"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Thiel"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
gix = { version = "0.37.2", features = ["max-performance"] }
prodash = { version = "23.0.0", features = ["render-line-autoconfigure", "render-line", "render-line-crossterm", "signal-hook"] }
crossbeam-channel = "0.5.6"
clap = { version = "4.1.6", features = ["derive"] }
rusqlite = "0.28.0"
